crates/plotnik-tests/tests/04-emit/bytecode/binding/unknown_node_with_suggestion.txt
Q = (function_declaraton) @fn
------------------ DIAGNOSTICS -------------------
error: `function_declaraton` is not a valid node kind
 --> query.ptk:1:6
  |
1 | Q = (function_declaraton) @fn
  |      ^^^^^^^^^^^^^^^^^^^
  |
help: replace with `function_declaration`
  |
1 | Q = (function_declaration) @fn
  |                       +
